--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-  "deprecated>=1.2.14"
+  "deprecated>=1.2.14",
+  "dash-leaflet",
+  "python-box",
+  "xyzservices ",
 ]
 
 [[project.authors]]
